
2012-05-08  Cedric Bail

	* Add eina_file_map_lines to iterate on lines of a mapped file.

2012-05-17  Albin Tonnerre

	* Fix portability issue of Eina_Value on ARM and PPC.
	* Fix portability issue of Eina_Value test on Itanium.

2012-05-23  Carsten Haitzler (The Rasterman)

        * Fix global_faulty faulty flag in eina_file to be set to 0
        initially rather than be random memory garbage.

2012-05-29  Vincent Torri

        * remove --disable-posix-threads and --disable-win32-threads
	from configure options, and detect automatically the threading
	support.
	Fix bug in the XML parser when a tag was in a comment or a
	cdata

2012-06-08  Mike Blumenkrantz

        * Fixed eina_str_split_full() to behave properly and be much faster

2012-06-17  Carsten Haitzler (The Rasterman)

        * Add env var EINA_MEMPOOL_PASS to force mempool to try use
        passthrough to malloc for debgging purposes and memory footrpint
        comparisons at runtime.

2012-07-01  Vincent Torri

        * Remove --enable-coverage from configure options,

2012-07-04  Vincent Torri

        * Implement eina_file_map_lines() on Windows.

2012-07-05  Raphael Kubo da Costa

	* Handle NULL in all eina_*_free function.

2012-08-01 Carsten Haitzler (The Rasterman)

        * Modify eina_prefix to deal with debian's fun new
        multiarch... if you are a shared library.

2012-08-01 Gustavo Sverzut Barbieri (k-s)

	* added eina_log_console_color_set() for cross platform console
	color set.

2012-08-14  Lucas De Marchi

        * Add EINA_SENTINEL macro to protect variadic functions

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-09-04  Roberto de Souza <zehortigoza@profusion.mobi>

        * Fix EINA_INLIST_FOREACH_SAFE macro to work when inlist is not the
        first item in the struct.

2012-09-11  Cedric Bail

	* Speedup Eina Rbtree Iterator by recycling memory instead of massively calling malloc/free.